% Generated by roxygen2 (4.1.0): do not edit by hand
% Please edit documentation in R/sadists.r
\name{sadists-NEWS}
\alias{sadists-NEWS}
\title{News for package 'sadists'}
\description{
History of the 'sadists' package.
}
