@@ -2,8 +2,8 @@ Package: sadists
 Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"),
     email="shabbychef@gmail.com"))
-Version: 0.0.0.9500
-Date: 2015-03-04
+Version: 0.0.0.9600
+Date: 2015-03-05
 License: LGPL-3
 Title: Some Additional Distributions
 BugReports: https://github.com/shabbychef/sadists/issues
@@ -13,10 +13,12 @@ Description: Density, distribution, quantile and generation functions of some ob
     the (weighted) sum of non-central chis; the (weighted) sum of non-central chi-squares to a power;
 Depends: 
     R (>= 3.0.2),
-    PDQutils (>= 0.1.0),
+    PDQutils (>= 0.1.1),
     hypergeo,
     orthopolynom
 Imports:
+    PDQutils,
+    hypergeo,
 		orthopolynom
 Suggests: 
     testthat, 
