@@ -34,3 +34,4 @@ export(rsumchisq)
 export(rupsilon)
 import(PDQutils)
 import(hypergeo)
+import(orthopolynom)
