@@ -73,7 +73,7 @@ opts_chunk$set(cache=TRUE,cache.path="cache/sadists")
 opts_chunk$set(fig.path="figure/sadists",dev=c("pdf"))
 #opts_chunk$set(fig.width=4.0,fig.height=6,dpi=200)
 # see http://stackoverflow.com/q/23419782/164611
-opts_chunk$set(fig.width=5.0,fig.height=3.0,out.width="5in",out.height="3in",dpi=300)
+opts_chunk$set(fig.width=5.0,fig.height=3.0,out.width="5in",out.height="3in",dpi=200)
 
 # doing this means that png files are made of figures;
 # the savings is small, and it looks like shit:
